<resources>
    <string name="app_name">Blackout Tracker</string>
    <string name="title_activity_main2">Existing History</string>
    <string name="new_">Start A New History</string>
    <string name="old_">Preview An Existing History</string>

    <string name="title_activity_fullscreen">Setup Your New History</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


    <string name="blackout_tracker">Blackout Tracker</string>
    <string name="history">History</string>
    <string name="description">Please select the time duration, frequency of media capture, and media types you wish to record.</string>
    <string name="setup_history">Setup your new history</string>
    <string name="duration">Duration:</string>
    <string name="hours">hours</string>
    <string name="mins">mins</string>
    <string name="media_capture_types">Media Capture Types:</string>
    <string name="video_checkbox">Video</string>
    <string name="picture_checkbox">Picture</string>
    <string name="text_checkbox">Text</string>
    <string name="v_checkbox">Voice</string>
    <string name="cancel_button">Cancel</string>
    <string name="create_button">Create</string>
    <string name="current_date">Date</string>
    <string name="time_duration">Time Duration:</string>
    <string name="time_left">Time Left:</string>
    <string name="interval_frequency">Interval Frequency:</string>
    <string name="next_interval">Next Interval:</string>
    <string name="capture_media">Capture Media</string>
    <string name="picture_button">Picture</string>
    <string name="video_button">Video</string>
    <string name="text_memo_button">Text Memo</string>
    <string name="voice_memo_button">Voice Memo</string>
    <string name="history_duration">history_duration</string>
    <string name="remainder">remainder</string>
    <string name="history_information">History Information</string>
    <string name="end_history">End History</string>
    <string name="frequency">frequency</string>
    <string name="media">Capture Media</string>




    <string name="title_activity_fullscreen2">FullscreenActivity2</string>
</resources>
