<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myfirstapp.HistoryInformation">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:background="@drawable/customborder"
            android:weightSum="1">

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/history_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/history_information"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="31sp"
                android:layout_weight="1.33" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.12">

            <TextView
                android:text="@string/current_date"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="#545454"
                android:textSize="32sp"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:id="@+id/currentDate"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:weightSum="1"
            android:layout_weight="0.14">

            <TextView
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:textColor="#545454"
                android:textSize="18sp"
                android:layout_width="89dp"
                android:layout_marginTop="30dp"
                android:text="@string/time_duration"
                android:layout_height="61dp"
                android:layout_weight="0.25" />

            <TextView
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:text="@string/history_duration"
                android:layout_marginTop="40dp"
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:id="@+id/history_duration"
                android:layout_weight="0.75" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:weightSum="1"
            android:layout_weight="0.25">

            <TextView
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="35dp"
                android:textColor="#545454"
                android:textSize="18sp"
                android:text="@string/time_left"
                android:layout_width="wrap_content"
                android:layout_weight="0.25"
                android:layout_height="31dp" />

            <TextView
                android:text="@string/remainder"
                android:layout_marginTop="35dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:id="@+id/remainder" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:weightSum="1"
            android:layout_weight="0.40">

            <TextView
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="35dp"
                android:textColor="#545454"
                android:textSize="18sp"
                android:layout_width="82dp"
                android:text="@string/interval_frequency"
                android:layout_height="52dp"
                android:layout_weight="0.25" />

            <TextView
                android:layout_marginTop="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:text="@string/frequency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:id="@+id/frequency" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <TextView
                android:textStyle="bold"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="35dp"
                android:textColor="#545454"
                android:textSize="18sp"
                android:layout_height="50dp"
                android:layout_weight="0.10"
                android:text="@string/next_interval"
                android:layout_width="wrap_content" />

            <TextView
                android:text="TextView"
                android:layout_marginTop="35dp"
                android:layout_marginLeft="40dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:id="@+id/nextint" />
        </LinearLayout>

        <Button
            android:text="@string/end_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="end_history"/>

    </LinearLayout>

</LinearLayout>
